data/derived/sp14/progs/unify/prog2139.ml.out
Characters 229-233:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type int * int
       but an expression was expected of type (int * int) list
